      permissions). This would cause us to set all subdirectories to
      ``0700`` and files to ``0600`` rather than leaving them unmodified.
      Now we ignore ``0000`` as the permissions and assume they are
      invalid. (John Arbash Meinel, #259855)

    * Merging from a previously joined branch will no longer cause 
      a traceback. (Jelmer Vernooij, #203376)
    
    * Running ``bzr st PATH_TO_TREE`` will no longer suppress merge
      status. Status is also about 7% faster on mozilla sized trees
      when the path to the root of the tree has been given. Users of
      the internal ``show_tree_status`` function should be aware that
      the show_pending flag is now authoritative for showing pending
      merges, as it was originally. (Robert Collins, #225204)

    * ``WorkingTree4`` trees will now correctly report missing-and-new
      paths in the output of ``iter_changes``. (Robert Collins)

  API CHANGES:

    * Exporters now take 4 parameters. (Robert Collins)

    * ``Tree.iter_changes`` will now return False for the content change
      field when a file is missing in the basis tree and not present in
      the target tree. Previously it returned True unconditionally.
      (Robert Collins)

    * The deprecated ``Branch.abspath`` and unimplemented 
      ``Branch.rename_one`` and ``Branch.move`` were removed. (Jelmer Vernooij)

    * BzrDir.cloning_metadir implementations must now take a require_stacking
      parameter.  (Aaron Bentley)

  TESTING:

    * ``addCleanup`` now takes ``*arguments`` and ``**keyword_arguments``
      which are then passed to the cleanup callable as it is run. In
      addition, addCleanup no longer requires that the callables passed to
      it be unique. (Jonathan Lange)

    * ``selftest``'s ``--starting-with`` option can now use predefined
      prefixes so that one can say ``bzr selftest -s bp.loom`` instead of
      ``bzr selftest -s bzrlib.plugins.loom``. (Vincent Ladeuil)

  INTERNALS:
